--- a/movie-libary/pom.xml
+++ b/movie-libary/pom.xml
@@ -22,10 +22,12 @@
 
 	<dependencies>
 		<dependency>
-			<groupId>junit</groupId>
-			<artifactId>junit</artifactId>
-			<version>3.8.1</version>
+			<groupId>org.junit.jupiter</groupId>
+			<artifactId>junit-jupiter-api</artifactId>
+			<version>5.10.2</version>
+			<scope>test</scope>
 		</dependency>
+
 
 		<dependency>
 			<groupId>org.apache.logging.log4j</groupId>
@@ -45,6 +47,7 @@
 			<artifactId>mysql-connector-j</artifactId>
 			<version>8.4.0</version>
 		</dependency>
+
 
 
 	</dependencies>
